[gd_scene load_steps=5 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Scripts/teste.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 63.4519, 62.0148 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 65.0668, 63.0222 )

[node name="Node2D" type="Node2D"]

[node name="teste" type="Sprite" parent="."]
editor/display_folded = true
modulate = Color( 0.831373, 0.0784314, 0.0784314, 1 )
position = Vector2( 331.4, 185.2 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="teste"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="teste/Area2D"]
shape = SubResource( 1 )

[node name="teste2" type="Sprite" parent="."]
editor/display_folded = true
modulate = Color( 0.333333, 0.345098, 0.639216, 0.494118 )
position = Vector2( 334.4, 268.2 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Area2D" type="Area2D" parent="teste2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="teste2/Area2D"]
shape = SubResource( 1 )

[node name="teste3" type="Sprite" parent="."]
editor/display_folded = true
modulate = Color( 0.364706, 0.639216, 0.333333, 0.494118 )
position = Vector2( 336.4, 360.2 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Area2D" type="Area2D" parent="teste3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="teste3/Area2D"]
shape = SubResource( 1 )

[node name="teste4" type="Sprite" parent="."]
editor/display_folded = true
modulate = Color( 0.839216, 0.811765, 0.0705882, 0.494118 )
position = Vector2( 336.4, 443.2 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Area2D" type="Area2D" parent="teste4"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="teste4/Area2D"]
shape = SubResource( 1 )

[node name="PaperArea" type="Sprite" parent="."]
editor/display_folded = true
modulate = Color( 0, 0, 0, 0.168627 )
position = Vector2( 792.861, 133.583 )
scale = Vector2( 2.41797, 1.56988 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="PaperArea" type="Area2D" parent="PaperArea"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PaperArea/PaperArea"]
shape = SubResource( 2 )

[node name="PaperArea2" type="Sprite" parent="."]
editor/display_folded = true
modulate = Color( 0, 0, 0, 0.168627 )
position = Vector2( 903.139, 326.25 )
scale = Vector2( 0.636718, 1.2678 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="PaperArea2" type="Area2D" parent="PaperArea2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PaperArea2/PaperArea2"]
shape = SubResource( 2 )

[node name="PaperArea3" type="Sprite" parent="."]
editor/display_folded = true
modulate = Color( 0, 0, 0, 0.168627 )
position = Vector2( 740.917, 381.694 )
scale = Vector2( 1.67144, 2.11849 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="PaperArea3" type="Area2D" parent="PaperArea3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PaperArea3/PaperArea3"]
shape = SubResource( 2 )

[node name="PaperArea4" type="Sprite" parent="."]
editor/display_folded = true
modulate = Color( 0, 0, 0, 0.168627 )
position = Vector2( 902.695, 463.694 )
scale = Vector2( 0.608941, 0.774739 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="PaperArea4" type="Area2D" parent="PaperArea4"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PaperArea4/PaperArea4"]
shape = SubResource( 2 )

[node name="GUI" type="Node2D" parent="."]

[node name="Label" type="Label" parent="GUI"]
margin_left = 15.5556
margin_top = 0.444458
margin_right = 55.5556
margin_bottom = 14.4445
[connection signal="mouse_entered" from="teste/Area2D" to="teste" method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="teste/Area2D" to="teste" method="_on_Area2D_mouse_exited"]
[connection signal="mouse_entered" from="teste2/Area2D" to="teste2" method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="teste2/Area2D" to="teste2" method="_on_Area2D_mouse_exited"]
[connection signal="mouse_entered" from="teste3/Area2D" to="teste3" method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="teste3/Area2D" to="teste3" method="_on_Area2D_mouse_exited"]
[connection signal="mouse_entered" from="teste4/Area2D" to="teste4" method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="teste4/Area2D" to="teste4" method="_on_Area2D_mouse_exited"]
